fixed collapsable cart

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -83,3 +83,7 @@ agm-map {
   z-index: 2;
   width: 100%  !important;
 }
+
+.collapsable {
+  width: 100%;
+}
